################################################################################
#                             nxTools - Change Log                             #
################################################################################

nxTools v1.0.2 (yet to be released):
  NEW: Option to set the default number of results for SITE DUPE/NEW/etc.
  CHG: Updated nxHelper to v2.2.5, initialisation speed improvements.
  FIX: Corrected a ASCII typo in the default Requests.Header template.

nxTools v1.0.1 (Oct 29, 2005):
  CHG: Display requests in ascending order, based on their ID.
  CHG: Moved configuration to the nxTools directory.
  CHG: Removed 'SITE INVITE' command.
  CHG: Removed an unneeded ORDER clause from the dupe database cleaner.
  FIX: The nuke tag should be removed on unnuke.
  FIX: Zero-padding the request ID caused Tcl to mistake it for an octal value.

nxTools v1.0.0 (Oct 12, 2005):
  NEW: SITE APPROVE BOT, for IRC approve support.
  NEW: SITE REQBOT, for IRC request support.
  CHG: Removed dZSbot support, only AlcoBot is supported now.
  CHG: Removed pre-time functionality, since duplicated in AlcoBot.
  CHG: Tcl extensions are now bundled in the nxTools package.
  CHG: Updated nxHelper to v2.2.1, which fixes a bug in the extension loader.
  FIX: Convert the list of nuked users into a string when logging them.
  FIX: Corrected the message shown on 'SITE NUKETOP' if there are no users.
  FIX: User ownership is now properly set on request tags.

nxTools v0.9.13 (Sep 10, 2005):
  NEW: Moved to the modified BSD license.
  CHG: Removed bot specific output for SITE commands.
  CHG: Removed unused configuration options.
  FIX: Admins could not delete requests by other users.

nxTools v0.9.12 (Aug 29, 2005):
  NEW: Option to force requests to be proper release names (e.g. release.name-group).
  CHG: MP3 pre's are logged as PRE-MP3 instead of just PRE (needed for the sitebot).
  FIX: Forgot to remove the invite options from nxTools.cfg.