@@ -1,0 +1,3 @@
+|------------------------------------------------------------------------|
+| Dn: %2(users_dn)@%-13(bw_dn) | Up: %2(users_up)@%-13(bw_up) | Total: %2(users_total)@%-14(bw_total) |
+'------------------------------------------------------------------------'
