@@ -1,0 +1,1 @@
+| %-10.10(user) | %-10.10(group) | %-14.14(tagline) | IDLE: %-21.21(idle) |
