@@ -1,0 +1,1 @@
+| %-10.10(user) | %-10.10(group) | %-14.14(tagline) | UL: %-12.12(file) - %-8.8(speed) |
